--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>My Site</title>
 </head>
 <body>
-    This is my Page using CI/CD Pipeline
+    <nav>
+        <div class="logo"><a href="">MyApp</a></div>
+        <ul class="nav-menu">
+            <li class="nav-link"><a href="">Home</a></li>
+            <li class="nav-link"><a href="">Resource</a></li>
+            <li class="nav-link"><a href="">About</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
