--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="assets/header.js"></script>
     <title>My Site</title>
 </head>
 <body>
-    <nav>
-        <div class="logo"><a href="">MyApp</a></div>
-        <ul class="nav-menu">
-            <li class="nav-link"><a href="">Home</a></li>
-            <li class="nav-link"><a href="">Resource</a></li>
-            <li class="nav-link"><a href="">About</a></li>
-        </ul>
-    </nav>
+      <div id="header"></div>  
 </body>
 </html>
