--- a/resources.html
+++ b/resources.html
@@ -12,8 +12,8 @@
     <nav>
     <div class="logo"><a href="">MyApp</a></div>
     <ul class="nav-menu">
-        <li class="nav-link"><a href="">Home</a></li>
-        <li class="nav-link"><a href="resources.html">Resource</a></li>
+        <li class="nav-link"><a href="index.html">Home</a></li>
+        <li class="nav-link"><a href="">Resource</a></li>
         <li class="nav-link"><a href="">About</a></li>
     </ul>
     <div class="burger" >
@@ -22,7 +22,7 @@
 </nav>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    Home
+    Resources
 <script src="assets/scripts.js"></script>
     
 </body>
